--- a/css/style.css
+++ b/css/style.css
@@ -658,16 +658,17 @@ body {
 .accordion__title {transition: color .3s ease-in-out;}
 
 .accordion__content {
-  display: none;
+  max-height: 0;
   font-size: 16px;
   font-weight: 400;
   line-height: 32px;
-  transition: opacity .3s ease-in-out;
   opacity: 0;
+	overflow: hidden;
+  transition: max-height .3s ease-in-out,
+              opacity .3s ease-in-out;
 }
 
 .accordion__content.open {
-  display: block;
   color: var(--dark-color);
   opacity: 1;
 }
